make a temp fix for posts

--- a/pages/blog/my-new-website.mdx
+++ b/pages/blog/my-new-website.mdx
@@ -1,7 +1,9 @@
-export const title = 'My new website!'
-export const date = '30/4/2020'
-export const desc = 'Thoughts on my new website and plans for the future.'
-export const image = '/sites/v1rtl.jpg'
+export const meta = {
+  title: 'My new website!',
+  date: '30/4/2020',
+  desc: 'Thoughts on my new website and plans for the future.',
+  image: '/sites/v1rtl.jpg',
+}
 
 # My new website!
 
