add articles on blog and try to fix safari error

--- a/pages/blog/my-new-website.mdx
+++ b/pages/blog/my-new-website.mdx
@@ -1,11 +1,11 @@
 export const meta = {
   title: 'My new website!',
-  date: '30/4/2020',
+  date: '30/04/2020',
   desc: 'Thoughts on my new website and plans for the future.',
   image: '/sites/v1rtl.jpg',
 }
 
-# My new website!
+<h1>{meta.title}</h1>
 
 ## What?
 
