improve mdx headings

--- a/pages/blog/being-a-teen-developer.mdx
+++ b/pages/blog/being-a-teen-developer.mdx
@@ -1,11 +1,12 @@
+import Meta from '../../components/Meta.tsx'
+
 export const meta = {
   title: 'Being a teen developer',
   date: '21/19/2019',
   image: '/blog/teen-dev.webp',
 }
 
-<img src={meta.image} alt={meta.title} />
-<h1>{meta.title}</h1>
+<Meta meta={meta} />
 
 ## Why this article exists
 
