--- a/pages/blog/my-new-website.mdx
+++ b/pages/blog/my-new-website.mdx
@@ -1,3 +1,5 @@
+import Meta from '../../components/Meta.tsx'
+
 export const meta = {
   title: 'My new website!',
   date: '30/04/2020',
@@ -5,7 +7,7 @@ export const meta = {
   image: '/sites/v1rtl.jpg',
 }
 
-<h1>{meta.title}</h1>
+<Meta meta={meta} />
 
 ## What?
 
