--- a/pages/blog/2020-bundlers-review.mdx
+++ b/pages/blog/2020-bundlers-review.mdx
@@ -1,11 +1,12 @@
+import Meta from '../../components/Meta.tsx'
+
 export const meta = {
   title: '2020 Bundlers Review',
   date: '14/02/2020',
   image: '/blog/bundlers.png',
 }
 
-<img src={meta.image} />
-<h1>{meta.title}</h1>
+<Meta meta={meta} />
 
 ## Intro
 
