clearing up meta tags

--- a/pages/blog/my-new-website.mdx
+++ b/pages/blog/my-new-website.mdx
@@ -4,7 +4,7 @@ export const meta = {
   title: 'My new website!',
   date: '30/04/2020',
   desc: 'Thoughts on my new website and plans for the future.',
-  image: '/sites/v1rtl.jpg',
+  image: '/blog/v1rtl.jpg',
 }
 
 <Meta meta={meta} />
