--- a/pages/blog/my-new-website.mdx
+++ b/pages/blog/my-new-website.mdx
@@ -1,4 +1,4 @@
-import Meta from '../../components/Meta.tsx'
+import Meta from '../../components/Article/Meta.tsx'
 
 export const meta = {
   title: 'My new website!',
