--- a/pages/blog/2020-bundlers-review.mdx
+++ b/pages/blog/2020-bundlers-review.mdx
@@ -1,4 +1,4 @@
-import Meta from '../../components/Meta.tsx'
+import Meta from '../components/Meta.tsx'
 
 export const meta = {
   title: '2020 Bundlers Review',
