--- a/pages/blog/being-a-teen-developer.mdx
+++ b/pages/blog/being-a-teen-developer.mdx
@@ -1,4 +1,4 @@
-import Meta from '../components/Meta.tsx'
+import Meta from '../../components/Article/Meta.tsx'
 
 export const meta = {
   title: 'Being a teen developer',
