--- a/pages/blog/lets-write-frontend-in-go.mdx
+++ b/pages/blog/lets-write-frontend-in-go.mdx
@@ -1,5 +1,4 @@
-import Meta from '../components/Meta.tsx'
-
+import Meta from '../../components/Article/Meta.tsx'
 export const meta = {
   title: "Let's write frontend in Go",
   desc: 'A short tutorial of setting up a simple Go+WASM app',
