--- a/pages/blog/lets-write-frontend-in-go.mdx
+++ b/pages/blog/lets-write-frontend-in-go.mdx
@@ -257,4 +257,5 @@ Let's try, it works!
 
 ## Conclusion
 
-You can do a lot of funny things related to DOM thanks to WebAssembly. And Go is a good language for building web apps without JS. It is easy, fun and cool.
+Although, all the API calls for now are made through JS, the fact that we can now pick other language than JavaScript is impressive.
+Probably, in the future, WebAssembly will get it's own DOM API.
