--- a/pages/blog/my-new-website.mdx
+++ b/pages/blog/my-new-website.mdx
@@ -20,10 +20,10 @@ I had 3 different versions of the website but decided to stop on the current one
 
 ## Why?
 
-My old site didn't have Safari support because of webp, which I used actively.
+My old site **didn't have Safari support** because of webp, which I used actively.
 
 There were no fallbacks, so the site didn't work in Safari completely.
-You would just see either broken images or this message if you opened it from Safari:
+You would just see either broken images or this message:
 
 <HtmlDemo>
   <center>
@@ -35,20 +35,9 @@ You would just see either broken images or this message if you opened it from Sa
   </center>
 </HtmlDemo>
 
-At the moment the website is fully supported by Safari (currently it's not. issue with `ResizeObserer`) so you won't see such screen anymore.
+At the moment the new website is fully supported on Safari so you won't see such screen anymore.
 
-If you opened the website with Internet Explorer, you would see this:
-
-<div style={{ fontFamily: 'monospace', userSelect: 'none' }}>
-  <Dino />
-  This site is unavailable for <strong>dinosaurs</strong>, please use something more modern.
-  Even if you have some old OS like Windows XP you can download <a>Opera</a> which is well supported on old OSes.
-  Otherwise just try Chrome / Firefox / Brave / etc.
-</div>
-
-I will do the same on my new website with Internet Explorer to help it to die .
-
-Here is the screenshot of how the old version looked like:
+If you're curious how it looked like, here is the screenshot:
 
 ![my old site](/blog/old_site.jpg)
 
@@ -68,7 +57,7 @@ I didn't want to make it fully static but at the same time it should've been sim
 
 From now on I'll be using this site as a place to write tutorials, tips and anything else I want to write.
 
-I have set up MDX so now every page can include React components, like here:
+I have installed MDX for the blog. Now every page can include React components, like here:
 
 <Box />
 
