switch to Basis and work on blog

--- a/pages/blog/2020-bundlers-review.mdx
+++ b/pages/blog/2020-bundlers-review.mdx
@@ -1,4 +1,4 @@
-import Meta from '../../components/Article/Meta.tsx'
+import Meta from '../../components/Blog/Meta.tsx'
 import BundlerInfo from '../../blog-components/bundlers-review/BundlerInfo.tsx'
 
 export const meta = {
