--- a/pages/blog/lets-write-frontend-in-go.mdx
+++ b/pages/blog/lets-write-frontend-in-go.mdx
@@ -3,7 +3,8 @@ import WasmButtonDemo from '../../blog-components/fe-in-go/WasmButtonDemo.tsx'
 
 import Alert from '../../components/Alert.tsx'
 
-import Meta from '../../components/Article/Meta.tsx'
+import Meta from '../../components/Blog/Meta.tsx'
+
 export const meta = {
   title: "Let's write frontend in Go",
   desc: 'A short tutorial of setting up a simple Go+WASM app',
