switch from @next/mdx to next-mdx-enhanced

--- a/pages/blog/2020-bundlers-review.mdx
+++ b/pages/blog/2020-bundlers-review.mdx
@@ -1,14 +1,11 @@
-import Meta from '../../components/Blog/Meta.tsx'
+---
+title: '2020 Bundlers Review'
+date: '14/02/2020'
+image: '/blog/bundlers.png'
+imageLink: 'https://medium.com/@ajmeyghani/javascript-bundlers-a-comparison-e63f01f2a364'
+---
+
 import BundlerInfo from '../../blog-components/bundlers-review/BundlerInfo.tsx'
-
-export const meta = {
-  title: '2020 Bundlers Review',
-  date: '14/02/2020',
-  image: '/blog/bundlers.png',
-  imageLink: 'https://medium.com/@ajmeyghani/javascript-bundlers-a-comparison-e63f01f2a364',
-}
-
-<Meta meta={meta} />
 
 ## Intro
 
