--- a/pages/blog/basis-universal-setup.mdx
+++ b/pages/blog/basis-universal-setup.mdx
@@ -1,12 +1,8 @@
-import Meta from '../../components/Blog/Meta.tsx'
-
-export const meta = {
-  title: 'Basis Universal setup in react-three-fiber',
-  date: '16/05/2020',
-  desc: 'Step-by-step tutorial about importing Basis Universal texture assets in react-three-fiber',
-}
-
-<Meta meta={meta} />
+---
+title: 'Basis Universal setup in react-three-fiber'
+date: '16/05/2020'
+desc: 'Step-by-step tutorial about importing Basis Universal texture assets in react-three-fiber'
+---
 
 ## Why using Basis
 
