--- a/pages/blog/being-a-teen-developer.mdx
+++ b/pages/blog/being-a-teen-developer.mdx
@@ -1,12 +1,8 @@
-import Meta from '../../components/Blog/Meta.tsx'
-
-export const meta = {
-  title: 'Being a teen developer',
-  date: '21/19/2019',
-  image: '/blog/teen-dev.webp',
-}
-
-<Meta meta={meta} />
+---
+title: 'Being a teen developer'
+date: '21/19/2019'
+image: '/blog/teen-dev.webp'
+---
 
 ## Why this article exists
 
