--- a/pages/blog/my-new-website.mdx
+++ b/pages/blog/my-new-website.mdx
@@ -1,16 +1,13 @@
-import Meta from '../../components/Blog/Meta.tsx'
+---
+title: 'My new website!'
+date: '18/05/2020'
+desc: 'Thoughts on my new website and plans for the future.'
+image: '/blog/v1rtl.jpg'
+---
+
 import Box from '../../blog-components/new-site/Box.tsx'
 import HtmlDemo from '../../blog-components/HtmlDemo.tsx'
 import Dino from '../../blog-components/new-site/Dino.tsx'
-
-export const meta = {
-  title: 'My new website!',
-  date: '18/05/2020',
-  desc: 'Thoughts on my new website and plans for the future.',
-  image: '/blog/v1rtl.jpg',
-}
-
-<Meta meta={meta} />
 
 W.I.P.
 
