--- a/pages/blog/tsc-cjs-esm.mdx
+++ b/pages/blog/tsc-cjs-esm.mdx
@@ -1,12 +1,8 @@
-import Meta from '../../components/Blog/Meta.tsx'
-
-export const meta = {
-  title: 'TypeScript-only bundling with CJS and ESM output',
-  date: '15/05/2020',
-  desc: 'A small tutorial about setting up TS-only builds with ESM, CJS and types',
-}
-
-<Meta meta={meta} />
+---
+title: 'TypeScript-only bundling with CJS and ESM output'
+date: '15/05/2020'
+desc: 'A small tutorial about setting up TS-only builds with ESM, CJS and types'
+---
 
 ## Why?
 
